applications/pymp/resources/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymp-redis
  namespace: pymp
  labels:
    app: pymp-redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 80
  selector:
    app: pymp-redis
